--- a/juego2.html
+++ b/juego2.html
@@ -17,275 +17,275 @@
     <table class="tabla2" border="1" align="center">
         <tbody>
             <tr width="75px" align="center">
-                <td width="75px" id="td0p0" class="td-content">
-                    <div class="button-content">
+                <td width="75px" height="110px" id="td0p0">
+                    <div>
                         <div id="l0p0">
                             <button onclick="imprimir(0, 0);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll0p0">&#9762</p>
+                    <p id="ll0p0"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td width="75px" id="td0p1" class="td-content">
-                    <div class="button-content">
+                <td width="75px" id="td0p1">
+                    <div>
                         <div id="l0p1">
                             <button onclick="imprimir(0, 1);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll0p1">&#9762</p>
+                    <p id="ll0p1"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td width="75px" id="td0p2" class="td-content">
-                    <div class="button-content">
+                <td width="75px" id="td0p2">
+                    <div>
                         <div id="l0p2">
                             <button onclick="imprimir(0, 2);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll0p2">&#9762</p>
+                    <p id="ll0p2"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td width="75px" id="td0p3" class="td-content">
-                    <div class="button-content">
+                <td width="75px" id="td0p3">
+                    <div>
                         <div id="l0p3">
                             <button onclick="imprimir(0, 3);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll0p3">&#9762</p>
+                    <p id="ll0p3"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td width="75px" id="td0p4" class="td-content">
-                    <div class="button-content">
+                <td width="75px" id="td0p4">
+                    <div>
                         <div id="l0p4">
                             <button onclick="imprimir(0, 4);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll0p4">&#9762</p>
+                    <p id="ll0p4"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
                 <td width="75px">
                     <p id="fila0">P</p>
                 </td>
             </tr>
             <tr align="center">
-                <td id="td1p0" class="td-content">
-                    <div class="button-content">
+                <td id="td1p0" height="110px">
+                    <div>
                         <div id="l1p0" >
                             <button onclick="imprimir(1, 0);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll1p0">&#9762</p>
+                    <p id="ll1p0"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td1p1" class="td-content">
-                    <div class="button-content">
+                <td id="td1p1">
+                    <div>
                         <div id="l1p1" >
                             <button onclick="imprimir(1, 1);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll1p1">&#9762</p>
+                    <p id="ll1p1"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td1p2" class="td-content">
-                    <div class="button-content">
+                <td id="td1p2">
+                    <div>
                         <div id="l1p2">
                             <button onclick="imprimir(1, 2);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll1p2">&#9762</p>
+                    <p id="ll1p2"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td1p3" class="td-content">
-                    <div class="button-content">
+                <td id="td1p3">
+                    <div>
                         <div id="l1p3">
                             <button onclick="imprimir(1, 3);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll1p3">&#9762</p>
+                    <p id="ll1p3"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td1p4" class="td-content">
-                    <div class="button-content">
+                <td id="td1p4">
+                    <div>
                         <div id="l1p4">
                             <button onclick="imprimir(1, 4);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll1p4">&#9762</p>
+                    <p id="ll1p4"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
                 <td>
                     <p id="fila1">P</p>
                 </td>
             </tr>
             <tr align="center">
-                <td id="td2p0" class="td-content">
-                    <div class="button-content">
+                <td id="td2p0" height="110px">
+                    <div>
                         <div id="l2p0">
                             <button onclick="imprimir(2, 0);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll2p0">&#9762</p>
+                    <p id="ll2p0"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td2p1" class="td-content">
-                    <div class="button-content">
+                <td id="td2p1">
+                    <div>
                         <div id="l2p1">
                             <button onclick="imprimir(2, 1);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll2p1">&#9762</p>
+                    <p id="ll2p1"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td2p2" class="td-content">
-                    <div class="button-content">
+                <td id="td2p2" >
+                    <div>
                         <div id="l2p2">
                             <button onclick="imprimir(2, 2);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll2p2">&#9762</p>
+                    <p id="ll2p2"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td2p3" class="td-content">
-                    <div class="button-content">
+                <td id="td2p3">
+                    <div>
                         <div id="l2p3">
                             <button onclick="imprimir(2, 3);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll2p3">&#9762</p>
+                    <p id="ll2p3"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td2p4" class="td-content">
-                    <div class="button-content">
+                <td id="td2p4">
+                    <div>
                         <div id="l2p4">
                             <button onclick="imprimir(2, 4);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll2p4">&#9762</p>
+                    <p id="ll2p4"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
                 <td>
                     <p id="fila2">P</p>
                 </td>
             </tr>
             <tr align="center">
-                <td id="td3p0" class="td-content">
-                    <div class="button-content">
+                <td id="td3p0" height="110px">
+                    <div>
                         <div id="l3p0">
                             <button onclick="imprimir(3, 0);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll3p0">&#9762</p>
+                    <p id="ll3p0"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td3p1" class="td-content">
-                    <div class="button-content">
+                <td id="td3p1">
+                    <div>
                         <div id="l3p1">
                             <button onclick="imprimir(3, 1);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll3p1">&#9762</p>
+                    <p id="ll3p1"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td3p2" class="td-content">
-                    <div class="button-content">
+                <td id="td3p2">
+                    <div>
                         <div id="l3p2">
                             <button onclick="imprimir(3, 2);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll3p2">&#9762</p>
+                    <p id="ll3p2"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td3p3" class="td-content">
-                    <div class="button-content">
+                <td id="td3p3">
+                    <div>
                         <div id="l3p3">
                             <button onclick="imprimir(3, 3);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll3p3">&#9762</p>
+                    <p id="ll3p3"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td3p4" class="td-content">
-                    <div class="button-content">
+                <td id="td3p4">
+                    <div>
                         <div id="l3p4">
                             <button onclick="imprimir(3, 4);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll3p4">&#9762</p>
+                    <p id="ll3p4"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
                 <td>
                     <p id="fila3">P</p>
                 </td>
             </tr>
             <tr align="center">
-                <td id="td4p0" class="td-content">
-                    <div class="button-content">
+                <td id="td4p0" height="110px">
+                    <div>
                         <div id="l4p0">
                             <button onclick="imprimir(4, 0);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll4p0">&#9762</p>
+                    <p id="ll4p0"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td4p1" class="td-content">
-                    <div class="button-content">
+                <td id="td4p1">
+                    <div>
                         <div id="l4p1">
                             <button onclick="imprimir(4, 1);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll4p1">&#9762</p>
+                    <p id="ll4p1"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td4p2" class="td-content">
-                    <div class="button-content">
+                <td id="td4p2">
+                    <div>
                         <div id="l4p2">
                             <button onclick="imprimir(4, 2);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll4p2">&#9762</p>
+                    <p id="ll4p2"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td4p3" class="td-content">
-                    <div class="button-content">
+                <td id="td4p3">
+                    <div>
                         <div id="l4p3">
                             <button onclick="imprimir(4, 3);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll4p3">&#9762</p>
+                    <p id="ll4p3"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
-                <td id="td4p4" class="td-content">
-                    <div class="button-content">
+                <td id="td4p4">
+                    <div>
                         <div id="l4p4">
                             <button onclick="imprimir(4, 4);">
                                 &#9760
                             </button>
                         </div>
                     </div>
-                    <p id="ll4p4">&#9762</p>
+                    <p id="ll4p4"><img src="pokemon.png" width="50px" height="50px" alt="Campo"></p>
                 </td>
                 <td>
                     <p id="fila4">P</p>
@@ -317,9 +317,9 @@
     puntuacion = 0
 
     function color(fila, columna) {
-        //Los dos primeros parametros son las pocisiones
+        //Los parametros son las pocisiones
         //de la tabla html donde se van a cambiar el color
-        //y los otros dos son las pocisiones en el array de donde
+        //y las pocisiones en el array de donde
         //se van a sacar los datos para la comprobacion
 
         if (tablero[fila][columna] == 3) {
@@ -341,9 +341,9 @@
         return tablero[fila][columna] == null ? perdiste() : "<strong>" + tablero[fila][columna] + "</strong>"
     }
     function imprimir(fila, columna) {
-        //Los dos primeros parametros son las pocisiones
+        //Los parametros son las pocisiones
         //de la tabla html donde se van a colocar los datos
-        //y los otros dos son las pocisiones en el array de donde
+        //y las pocisiones en el array de donde
         //se van a sacar los datos
 
         puntuacion += tablero[fila][columna] == null ? 0: tablero[fila][columna]
@@ -427,7 +427,7 @@
                 // Volver a escribir los "simbolo radiacion"
                 //
 
-                document.getElementById("ll" + i + "p" + i2).innerHTML = '&#9762'
+                document.getElementById("ll" + i + "p" + i2).innerHTML = '<img src="pokemon.png" width="50px" height="50px" alt="Campo">'
 
                 //Resetear el color
                 //
