--- a/prodiseño/pro/pro/index.html
+++ b/prodiseño/pro/pro/index.html
@@ -25,10 +25,10 @@
 
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="adopta.html">Adopta</a></li>
+                <li><a href="paginas/adopta.html">Adopta</a></li>
                 <li><a href="finalesFelices.html">Finales Felices</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="nosotros.html">Sobre nosotros</a></li>
+                <li><a href="paginas/contacto.html">Contacto</a></li>
+                <li><a href="paginas/nosotros.html">Sobre nosotros</a></li>
 
             </ul>
         </nav>
@@ -68,24 +68,24 @@
         <article class="tercero">
             <h1 class="hh12">ANIMALES EN ADOPCION</h1>
 
-            <a  class="tooltip" href="animal.html"><img class="img" src="img/istockphoto-1256586406-640x640.jpg"
+            <a  class="tooltip" href="paginas/animal.html"><img class="img" src="img/istockphoto-1256586406-640x640.jpg"
                     alt="Animal" width="200" height="200"> <span class="tooltip-text">
                     <p> Parvati <br> Un animal con mucho cariño para dar </p>
                 </span> </a>
 
-            <a  class="tooltip" href="animal.html"><img class="img"
+            <a  class="tooltip" href="paginas/animal.html"><img class="img"
                     src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal" width="200"
                     height="200"><span class="tooltip-text">
                     <p> Parvati <br> Un animal con mucho cariño para dar </p>
                 </span> </a>
 
-            <a  class="tooltip" href="animal.html"><img class="img"
+            <a  class="tooltip" href="paginas/animal.html"><img class="img"
                     src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal" width="200"
                     height="200"><span class="tooltip-text">
                     <p> Parvati <br> Un animal con mucho cariño para dar </p>
                 </span> </a>
 
-            <a  class="tooltip" href="animal.html"><img class="img"
+            <a  class="tooltip" href="paginas/animal.html"><img class="img"
                     src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal" width="200"
                     height="200"><span class="tooltip-text">
                     <p> Parvati <br> Un animal con mucho cariño para dar </p>
