--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/animal.html
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/animal.html
@@ -46,7 +46,7 @@
                         <img src="../img/istockphoto-1256586406-640x640.jpg" class="imgcarrou" alt="Animal" width="300" height="300">
                         <img src="../img/istockphoto-1256586406-640x640.jpg" class="imgcarrou" alt="Animal" width="300" height="300">
                         <img src="../img/istockphoto-1256586406-640x640.jpg" class="imgcarrou" alt="Animal" width="300" height="300">
-                        <img src="../img/istockphoto-1256586406-640x640.jpg" class="imgcarrouactiva" alt="Animal" width="300" height="300">
+                        <img src="../img/animales-corre-hierba-perro-wallpaper-preview.jpg" class="imgcarrouactiva" alt="Animal" width="300" height="300">
                     </div>
                     <ul class="puntos" >
                         <li class="punto" ></li>
@@ -152,6 +152,10 @@
                     </tbody>
 
                 </table>
+                <div class="lightbox" >
+                    <button class="cerrar" >Cerrar</button>
+                    <img src="../img/istockphoto-1256586406-640x640.jpg" alt="" class="grandelight" >
+                </div>
             </article>
         </div>
 
