--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/contacto.html
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/contacto.html
@@ -47,6 +47,13 @@
 
             </article>
             <article class="nosotros2">
+
+                <ul>
+                    <li class="li" > boton 1</li>
+                    <li class="li" > boton 2</li>
+                    <li class="li" > boton 3</li>
+                </ul>
+
                 <ul class="ul-contacto">
                     <li class="li-1"><img class="li-1-image" src="../img/google-maps.svg" alt="Direccion" width="25" height="25">
                         <p>Calle falsa, 123, 11540, Sanlucar de Barrameda(cadiz)</p>
