--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/contacto.html
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/contacto.html
@@ -46,31 +46,60 @@
 
 
             </article>
-            <article class="nosotros2">
 
-                <ul>
-                    <li class="li" > boton 1</li>
-                    <li class="li" > boton 2</li>
-                    <li class="li" > boton 3</li>
+        <div class="tab" >
+                <ul class="ul" >
+                    <li class="li" > Direccion</li>
+                    <li class="li" > Telefono</li>
+                    <li class="li" > Correo</li>
+                    <li class="li" > Horario</li>
                 </ul>
 
-                <ul class="ul-contacto">
-                    <li class="li-1"><img class="li-1-image" src="../img/google-maps.svg" alt="Direccion" width="25" height="25">
+            <div class="subtab" >
+
+
+
+                <div class="bloquetab" >
+
+                    <img class="li-1-image" src="../img/google-maps.svg" alt="Direccion" width="25" height="25">
                         <p>Calle falsa, 123, 11540, Sanlucar de Barrameda(cadiz)</p>
-                    </li>
-                    <li class="li-1"><img class="li-1-image" src="../img/whatsapp.svg" alt="whatsApp" width="25"
+
+
+                </div>
+
+                <div class="bloquetab" >
+
+                    <img class="li-1-image" src="../img/whatsapp.svg" alt="whatsApp" width="25"
                             height="25">
                         <p>666 999 888 <br> 677 966 877 </p>
-                    </li>
-                    <li class="li-1"><img class="li-1-image" src="../img/gmail.svg" alt="gmail" width="25"
+
+
+                </div>
+
+
+                <div class="bloquetab" >
+
+                    <img class="li-1-image" src="../img/gmail.svg" alt="gmail" width="25"
                             height="25">
                         <p>voluntarios@animalessanlucar.info <br> presidente@animalessanlucar.info </p>
-                    </li>
-                    <li class="li-1"><img class="li-1-image" src="../img/calendar.svg" alt="Horario" width="25" height="25">
+
+
+                </div>
+
+                <div class="bloquetab" >
+
+                    <img class="li-1-image" src="../img/calendar.svg" alt="Horario" width="25" height="25">
                         <p>De lunes a viernes de 8:00h a 15:00h</p>
-                    </li>
-                </ul>
-            </article>
+
+
+                </div>
+
+
+
+            </div>
+        </div>
+
+
         </div>
         <div class="noso31">
             <article class="nosotros3">
@@ -108,6 +137,32 @@
                         height="25"></a></li>
         </ul>
     </footer>
+
+<script>
+
+    li = document.querySelectorAll('.li')
+    bloque = document.querySelectorAll('.bloquetab')
+
+    li.forEach( ( cadali , i)=> {
+        li[i].addEventListener('click', ()=>{
+
+            li.forEach((cadali , i )=>{
+                li[i].classList.remove('activot')
+                bloque[i].classList.remove('activot')
+
+            })
+
+            li[i].classList.add('activot')
+            bloque[i].classList.add('activot')
+
+        })
+
+    });
+
+
+</script>
+
+
 </body>
 
 </html>
