--- a/phpc/U05-A04-JorgeIbañez.html
+++ b/phpc/U05-A04-JorgeIbañez.html
@@ -15,6 +15,7 @@
 document.querySelector("input").addEventListener("keydown", azul);
 
 function azul(e) {
+    console.log(e.keydown)
     document.getElementById("aa").style.backgroundColor = '#CCE6FF'
 }
 
