--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/animal.html
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/animal.html
@@ -9,19 +9,11 @@
 </head>
 
 <body>
-    <div class="container portada">
-        <img src="../img/animals_dog.svg"  class="svg1" alt="Imagen Portada">
-        <div class="encima">
-            <h2>ANIMALES SANLUCAR</h2>
-        </div>
-        <img src="../img/animals_cat.svg"  class="svg2" alt="Imagen Portada">
-
-
-    </div>
     <header>
-<a href="../index.html"><img src="../img/logo.png" alt="Animales Sanlucar logo" width="70"
-                    height="70"></a>
+
         <nav>
+            <a href="../index.html"><img src="../img/logo.png" alt="Animales Sanlucar logo" width="70"
+                height="70"></a>
 
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -32,12 +24,24 @@
 
             </ul>
         </nav>
+    <div class="container portada">
+        <img src="../img/animals_dog.svg"  class="svg1" alt="Imagen Portada">
+        <div class="encima">
+            <h2>ANIMALES SANLUCAR</h2>
+        </div>
+        <img src="../img/animals_cat.svg"  class="svg2" alt="Imagen Portada">
+
+
+    </div>
+
+
+
 
     </header>
 
     <div class="columna1"></div>
     <div class="columna2"></div>
-
+<main>
     <section>
         <div class="noso">
             <article class="nosotros1">
@@ -126,7 +130,7 @@
                     <thead>
                         <tr class="sinborde">
                             <th class="tg-0lax" colspan="3">
-                                <h1>Galeria de imagenes y videos</h1>
+                                <h2>Galeria de imagenes y videos</h2>
 
                             </th>
                         </tr>
@@ -151,7 +155,8 @@
                         </tr>
                         <tr>
                             <td class="tg-0lax" colspan="3" >
-                                <iframe height="200" width="600" src="https://www.youtube.com/embed/4sVPBVhOAgU?si=y2_XBYXd96Nih8aE&amp;controls=0&amp;start=7&amp;modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+                                <iframe height="200" width="600" src="https://www.youtube.com/embed/4sVPBVhOAgU?si=y2_XBYXd96Nih8aE&amp;controls=0&amp;start=7&amp;modestbranding=1"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </td>
 
                         </tr>
@@ -167,13 +172,13 @@
 
 
     </section>
-
+</main>
     <footer>
         <input type="button" value="Donar" onclick="donar()">
 
         <img src="../img/png-clipart-discover-card-mastercard-american-express-visa-credit-card-mastercard-text-logo.png"
             alt="Tarjetas Disponibles" width="74" height="33">
-        <h4>2023 @ ANIMALES SANLUCAR, Centro Municipal de Proteccion Animal</h4>
+        <h3>2023 @ ANIMALES SANLUCAR, Centro Municipal de Proteccion Animal</h3>
         <ul>
             <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.es"><img src="../img/cclicencia.png" alt="instagram" width="75" height="30"></a></li>
             <li><a href="https://www.instagram.com/"><img src="../img/insta.png" alt="instagram" width="27" height="27"></a></li>
