--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/animal.html
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/animal.html
@@ -27,7 +27,7 @@
     <div class="container portada">
         <img src="../img/animals_dog.svg"  class="svg1" alt="Imagen Portada">
         <div class="encima">
-            <h2>ANIMALES SANLUCAR</h2>
+            <h1>ANIMALES SANLUCAR</h1>
         </div>
         <img src="../img/animals_cat.svg"  class="svg2" alt="Imagen Portada">
 
@@ -67,10 +67,13 @@
             </article>
             <article class="nosotros2">
                 <table class="tg">
+                    <caption hidden>
+                        Información del animal
+                    </caption>
                     <thead>
                         <tr>
                             <th class="tg-0lax" colspan="2">
-                                <h1>Información</h1>
+                                <h2>Información</h2>
                                 <p> Parvati es un perro muy cariñoso y bueno que busca una nueva oportunidad en la vida
                                 </p>
                             </th>
@@ -127,10 +130,13 @@
         <div class="noso">
             <article class="nosotros3">
                 <table class="tg1" cellspacing="0">
+                    <caption hidden>
+                        Galería de imágenes y videos del animal
+                    </caption>
                     <thead>
                         <tr class="sinborde">
                             <th class="tg-0lax" colspan="3">
-                                <h2>Galeria de imagenes y videos</h2>
+                                <h3>Galeria de imagenes y videos</h3>
 
                             </th>
                         </tr>
