--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/contacto.html
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/paginas/contacto.html
@@ -9,6 +9,22 @@
 </head>
 
 <body>
+    <header>
+
+                <nav>
+                    <a href="../index.html"><img src="../img/logo.png" alt="Animales Sanlucar logo" width="70"
+                        height="70"></a>
+                    <ul>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="adopta.html">Adopta</a></li>
+                        <li><a href="finalesFelices.html">Finales Felices</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="nosotros.html">Sobre nosotros</a></li>
+
+                    </ul>
+                </nav>
+
+            </header>
     <div class="container portada">
         <img src="../img/animals_dog.svg"  class="svg1" alt="Imagen Portada">
         <div class="encima">
@@ -18,27 +34,12 @@
 
 
     </div>
-    <header>
-<a href="../index.html"><img src="../img/logo.png" alt="Animales Sanlucar logo" width="70"
-                    height="70"></a>
-        <nav>
 
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="adopta.html">Adopta</a></li>
-                <li><a href="finalesFelices.html">Finales Felices</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="nosotros.html">Sobre nosotros</a></li>
-
-            </ul>
-        </nav>
-
-    </header>
 
     <div class="columna1"></div>
     <div class="columna2"></div>
 
-    <section>
+    <section class="sec2" >
         <div class="noso11">
             <article class="nosotros1">
 
@@ -107,6 +108,7 @@
                     <fieldset>
                         <legend>Formulario de Contacto</legend>
                         <div class="div-form">
+                            <label for="nombre" hidden>Nombre</label>
                             <input class="in-form-1" type="text" id="nombre" name="nombre" placeholder="NOMBRE" required
                                 minlength="2" maxlength="30">
                             <input class="in-form-1" type="email" id="correo" name="correo" placeholder="EMAIL" required
