--- a/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/index.html
+++ b/diweb.Inclusión-de-Contenido-Multimedia-en-la-web.JorgeIbáñez/JorgeIbáñezGonzálezProyecto/index.html
@@ -9,31 +9,33 @@
 </head>
 
 <body>
+    <header>
+
+                <nav>
+                    <a href="index.html"><img src="img/logo.png" alt="Animales Sanlucar logo" width="70"
+                        height="70"></a>
+
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="paginas/adopta.html">Adopta</a></li>
+                        <li><a href="finalesFelices.html">Finales Felices</a></li>
+                        <li><a href="paginas/contacto.html">Contacto</a></li>
+                        <li><a href="paginas/nosotros.html">Sobre nosotros</a></li>
+
+                    </ul>
+                </nav>
+
+            </header>
     <div class="container portada">
-        <img src="img/animals_dog.svg"  class="svg1" alt="Imagen Portada">
+        <img src="img/animals_dog.svg"  class="svg1" alt="Imagen Portada perro">
         <div class="encima">
-            <h2>ANIMALES SANLUCAR</h2>
+            <h1>ANIMALES SANLUCAR</h1>
         </div>
-        <img src="img/animals_cat.svg"  class="svg2" alt="Imagen Portada">
+        <img src="img/animals_cat.svg"  class="svg2" alt="Imagen Portada gato">
 
 
     </div>
-    <header>
-<a href="index.html"><img src="img/logo.png" alt="Animales Sanlucar logo" width="70"
-                    height="70"></a>
-        <nav>
 
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="paginas/adopta.html">Adopta</a></li>
-                <li><a href="finalesFelices.html">Finales Felices</a></li>
-                <li><a href="paginas/contacto.html">Contacto</a></li>
-                <li><a href="paginas/nosotros.html">Sobre nosotros</a></li>
-
-            </ul>
-        </nav>
-
-    </header>
 
     <div class="columna1"></div>
     <div class="columna2"></div>
@@ -46,9 +48,9 @@
 
 
         <div >
-            <h1 class="hh12 h2">
+            <h2 class="hh12 h2">
                 Bienvenidos a ANIMALES SANLUCAR
-            </h1>
+            </h2>
         </div>
 
 
@@ -71,7 +73,7 @@
             </div>
             <div class="bloque" >
         <article class="tercero">
-            <h1 class="hh12 h2">ANIMALES EN ADOPCION</h1>
+            <h2 class="hh12 h2">ANIMALES EN ADOPCION</h2>
             <div class="contenido" >
             <a  class="tooltip" href="paginas/animal.html"><img class="img" src="img/istockphoto-1256586406-640x640.jpg"
                     alt="Animal" width="200" height="200"> <span class="tooltip-text">
@@ -79,19 +81,19 @@
                 </span> </a>
 
             <a  class="tooltip" href="paginas/animal.html"><img class="img"
-                    src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal" width="200"
+                    src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal 1" width="200"
                     height="200"><span class="tooltip-text">
                     <p> Parvati <br> Un animal con mucho cariño para dar </p>
                 </span> </a>
 
             <a  class="tooltip" href="paginas/animal.html"><img class="img"
-                    src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal" width="200"
+                    src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal 2" width="200"
                     height="200"><span class="tooltip-text">
                     <p> Parvati <br> Un animal con mucho cariño para dar </p>
                 </span> </a>
 
             <a  class="tooltip" href="paginas/animal.html"><img class="img"
-                    src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal" width="200"
+                    src="img/bigstock-close-up-of-male-hand-petting-340780039.jpeg" alt="Animal 3" width="200"
                     height="200"><span class="tooltip-text">
                     <p> Parvati <br> Un animal con mucho cariño para dar </p>
                 </span> </a>
@@ -108,9 +110,9 @@
 
         <img src="img/png-clipart-discover-card-mastercard-american-express-visa-credit-card-mastercard-text-logo.png"
             alt="Tarjetas Disponibles" width="74" height="33">
-        <h4>2023 @ ANIMALES SANLUCAR, Centro Municipal de Proteccion Animal</h4>
+        <h3>2023 @ ANIMALES SANLUCAR, Centro Municipal de Proteccion Animal</h3>
         <ul>
-            <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.es"><img src="img/cclicencia.png" alt="instagram" width="75" height="30"></a></li>
+            <li><a href="https://creativecommons.org/licenses/by-sa/4.0/deed.es"><img src="img/cclicencia.png" alt="Licencia" width="75" height="30"></a></li>
             <li><a href="https://www.instagram.com/"><img src="img/insta.png" alt="instagram" width="27" height="27"></a></li>
             <li><a href="https://www.facebook.com/?locale=es_ES"><img src="img/facebook.png" alt="facebook" width="25"
                         height="25"></a></li>
